# django-boilerplate

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  Procfile  README-EN.md  README.md  app.json  bower.json  docker-compose.yml  example.env  manage.py  package.json  pyproject.toml  pytest.ini  requirements.txt
.bin/: psql  run
.github/workflows/: deploy.yaml  run-integration-tests.yml  run-unit-tests.yml
backend/: urls.py  wsgi.py
backend/core/: apps.py  urls.py  views.py
backend/core/tests/: test_templates.py  test_views.py
config/compose/: docker-compose.yml
config/docker/: backend.dockerfile
config/make/: base.mk  docker.mk  local.mk  tests.mk
frontend/styles/: main.scss
frontend/templates/: base.html
frontend/templates/core/: index.html
list/local/: bin  include  lib
requirements/: dev.in  dev.txt  heroku.in  heroku.txt  production.in  production.txt  test.in  test.txt
settings/: __init__.py  base.py  local.py  mail.py  security.py  static.py
tests/integration/: test_views.py
tests/unit/: test_dummy_stuff.py
