[build-system]
# Should be the same as `$POETRY_VERSION` in backend.dockerfile:
requires = ["poetry==1.1.9"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
whitenoise = "^5.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
gunicorn = "^20.0.4"
unipath = "^1.1"
libsass = "^0.20.0"
environs = {extras = ["django"], version = "^8.0.0"}
django-extensions = "^3.0.2"
Django = ">=3.1.12"
django-compressor = "^3.0"

[tool.poetry.dev-dependencies]
model-bakery = "^1.1.0"
pytest = "^6.2.5"
pytest-django = "^3.9.0"
pytest-mock = "^3.1.1"
pytest-spec = "^2.0.0"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
flake8-isort = "^4.0.0"
black = "^21.6b0"
ipython = "^7.30.0"
django-debug-toolbar = "^3.2.3"

[tool.blue]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | _local
  | bin
  | misc
  | _public
  | _data
  | config
  | frontend
)/
'''
