[build-system]
# Should be the same as `$POETRY_VERSION` in backend.dockerfile:
requires = ["poetry==1.1.9"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
whitenoise = "^6.0.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
Unipath = "^1.1"
libsass = "^0.21.0"
environs = "^9.5.0"
django-extensions = "^3.1.5"
django-compressor = "^3.1"
Django = "^4.1.7"


[tool.poetry.dev-dependencies]
model-bakery = "^1.4.0"
pytest = "^7.1.1"
pytest-django = "^4.5.2"
pytest-mock = "^3.7.0"
pytest-spec = "^3.2.0"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
ipython = "^8.2.0"
django-debug-toolbar = "^3.2.4"
blue = "^0.8.0"


[tool.blue]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | _local
  | bin
  | misc
  | _public
  | _data
  | config
  | frontend
)/
'''
